Insert OWASP vulnerabilities
