# backend/models/meetingModel.js
@@ -1,0 +1,13 @@
+import mongoose from 'mongoose';
+
+const meetingPlannerSchema = mongoose.Schema(
+    {
+        subject: { type: String, required: true, enum: ['Savings', 'Investment', 'Mortgage'], default: 'Mortgage' },
+        schedule: { type: Date, required: true },
+        accountId: { type: String, required: true},
+    }
+);
+
+const MeetingPlannerModel = mongoose.model('Consultation', meetingPlannerSchema);
+
+export default MeetingPlannerModel;
