# backend/routes/accountsRoutes.js
@@ -4,6 +4,8 @@ import { handleMethodNotAllowed } from '../middleware/errorHandlers.js';
 import {     
     getAccounts,
     deleteAccount,
+    updateAccountOptions,
+    createNotification,
     getBalance,
     getPayeeList,
     createPayee,
@@ -15,7 +17,8 @@ import {
     createCardApplication,
     getCardApplication,
     modifyCardApplication,
-    deleteCardApplication
+    deleteCardApplication,
+    createMeeting
  } from '../controllers/accountsController.js';
 
 const router  = express.Router();
@@ -23,6 +26,11 @@ const router  = express.Router();
 router.route('/')
     .get(authenticateToken, getAccounts)
     .delete(authenticateToken, deleteAccount)
+    .put(authenticateToken, updateAccountOptions)
+    .all(handleMethodNotAllowed)
+
+router.route('/notifications/socialmedia')
+    .post(authenticateToken, createNotification)
     .all(handleMethodNotAllowed)
 
 router.route('/balances')
@@ -59,6 +67,10 @@ router.route('/products/cards')
 router.route('/products/cards/:referenceId')
     .put(authenticateToken, modifyCardApplication)
     .delete(authenticateToken, deleteCardApplication)
+    .all(handleMethodNotAllowed)
+
+router.route('/products/mortgages/meeting')
+    .post(authenticateToken, createMeeting)
     .all(handleMethodNotAllowed)
 
 export default router;
