# oas/openAPI_remediated.json
@@ -4,9 +4,9 @@
         "title": "42C Bank API",
         "description": "An intentionally unsecure banking API for education and training purposes.",
         "contact": {
-            "name": "42Crunch Support",
-            "url": "https://support.42crunch.com",
-            "email": "support@42crunch.com"
+            "name": "42Crunch",
+            "url": "https://developers.42crunch.com",
+            "email": "developers@42crunch.com"
         },
         "version": "1.0.0"
     },
@@ -211,6 +211,43 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/MessageObject"
+                                }
+                            }
+                        }
+                    },
+                    "406": {
+                        "$ref": "#/components/responses/406ErrorResponse"
+                    },
+                    "415": {
+                        "$ref": "#/components/responses/415ErrorResponse"
+                    },
+                    "429": {
+                        "$ref": "#/components/responses/429ErrorResponse"
+                    },
+                    "default": {
+                        "$ref": "#/components/responses/DefaultErrorResponse"
+                    }
+                }
+            },
+            "put": {
+                "description": "Update account optional settings",
+                "operationId": "UpdateAccount",
+                "requestBody":{
+                    "content": {
+                        "application/json":{
+                            "schema":{
+                                "$ref": "#/components/schemas/AccountOptions"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json":{
+                                "schema":{
+                                    "$ref": "#/components/schemas/AccountOptions"
                                 }
                             }
                         }
@@ -869,6 +906,106 @@
                     }
                 }
             }
+        },
+        "/account/notifications/socialmedia": {
+            "post": {
+                "description": "Initiate a connection request to your social media account for bank notifications",
+                "operationId": "CreateSocialMediaNotification",
+                "parameters": [],
+                "requestBody":{
+                    "content": {
+                        "application/json":{
+                            "schema":{
+                                "type": "object",
+                                "properties": {
+                                    "profileUrl":{
+                                      "type": "string",
+                                      "format": "uri",
+                                      "pattern": "^(?:(?:[A-Za-z][A-Za-z0-9\\-+.]*):(?:(?://(?:(?:(?:(?:[A-Za-z0-9](?:[\\w\\-]{0,61}[A-Za-z0-9])?)(?:\\.(?:[A-Za-z0-9](?:[\\w\\-]{0,61}[A-Za-z0-9])?))*\\.[A-Za-z]{2,})|(?:(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])(?:\\.(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])){3}|\\[(?:(?:(?:[0-9A-Fa-f]{1,4}):){6}(?:(?:[0-9A-Fa-f]{1,4}):(?:[0-9A-Fa-f]{1,4})|(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])(?:\\.(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])){3})|::(?:(?:[0-9A-Fa-f]{1,4}):){5}(?:(?:[0-9A-Fa-f]{1,4}):(?:[0-9A-Fa-f]{1,4})|(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])(?:\\.(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])){3})|(?:[0-9A-Fa-f]{1,4})?::(?:(?:[0-9A-Fa-f]{1,4}):){4}(?:(?:[0-9A-Fa-f]{1,4}):(?:[0-9A-Fa-f]{1,4})|(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])(?:\\.(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])){3})|(?:(?:(?:[0-9A-Fa-f]{1,4}):){0,1}(?:[0-9A-Fa-f]{1,4}))?::(?:(?:[0-9A-Fa-f]{1,4}):){3}(?:(?:[0-9A-Fa-f]{1,4}):(?:[0-9A-Fa-f]{1,4})|(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])(?:\\.(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])){3})|(?:(?:(?:[0-9A-Fa-f]{1,4}):){0,2}(?:[0-9A-Fa-f]{1,4}))?::(?:(?:[0-9A-Fa-f]{1,4}):){2}(?:(?:[0-9A-Fa-f]{1,4}):(?:[0-9A-Fa-f]{1,4})|(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])(?:\\.(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])){3})|(?:(?:(?:[0-9A-Fa-f]{1,4}):){0,3}(?:[0-9A-Fa-f]{1,4}))?::(?:[0-9A-Fa-f]{1,4}):(?:(?:[0-9A-Fa-f]{1,4}):(?:[0-9A-Fa-f]{1,4})|(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])(?:\\.(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])){3})|(?:(?:(?:[0-9A-Fa-f]{1,4}):){0,4}(?:[0-9A-Fa-f]{1,4}))?::(?:(?:[0-9A-Fa-f]{1,4}):(?:[0-9A-Fa-f]{1,4})|(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])(?:\\.(?:25[0-5]|(?:2[0-4]|1[0-9]|[1-9]|)[0-9])){3})|(?:(?:(?:[0-9A-Fa-f]{1,4}):){0,5}(?:[0-9A-Fa-f]{1,4}))?::(?:[0-9A-Fa-f]{1,4})|(?:(?:(?:[0-9A-Fa-f]{1,4}):){0,6}(?:[0-9A-Fa-f]{1,4}))?::)\\]))(?:\\:(?:[1-5][0-9]{0,4}|6(?:|[0-4][0-9]{0,3}|5(?:|[0-4][0-9]{0,2}|5(?:|[0-2][0-9]?|3[0-5]?|[4-9])|[6789][0-9]?)|[6789][0-9]{0,2})|[789][0-9]{0,3}))?)(?:/(?:[\\w\\-.~!$&'()*+,;=%@:]+(?:/[\\w\\-.~!$&'()*+,;=%@:]*)*)?)?|(?:/(?:[\\w\\-.~!$&'()*+,;=%@:]+(?:/[\\w\\-.~!$&'()*+,;=%@:]*)*)?)|(?:[\\w\\-.~!$&'()*+,;=%@:]+(?:/[\\w\\-.~!$&'()*+,;=%@:]*)*))?(?:\\?[\\w\\-.~!$&'()*+,;=%@:/\\?]*)?(?:#[\\w\\-.~!$&'()*+,;=%@:/\\?]*)?)?)$",
+                                      "example": "https://linkedin/in/anthonylonergan/",
+                                      "minLength": 2,
+                                      "maxLength": 2000,
+                                      "x-42c-format": "o:uri"
+                                    }
+                                },
+                                "additionalProperties": false
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "$ref": "#/components/schemas/MessageObject"
+                    },
+                    "406": {
+                        "$ref": "#/components/responses/406ErrorResponse"
+                    },
+                    "415": {
+                        "$ref": "#/components/responses/415ErrorResponse"
+                    },
+                    "429": {
+                        "$ref": "#/components/responses/429ErrorResponse"
+                    },
+                    "default": {
+                        "$ref": "#/components/responses/DefaultErrorResponse"
+                    }
+                }
+            }
+        },
+        "/account/products/mortgages/meeting": {
+            "post": {
+                "description": "Reserve a meeting with a mortgage consultant",
+                "parameters": [],
+                "requestBody":{
+                    "content": {
+                        "application/json":{
+                            "schema":{
+                                "type": "object",
+                                "properties": {
+                                    "schedule": {
+                                        "type": "string",
+                                        "format": "date-time",
+                                        "example": "2024-08-01T16:00",
+                                        "pattern": "^[0-9]{4}-(?:0[1-9]|1[0-2])-(?:0[1-9]|[12][0-9]|3[01])T(?:[01][0-9]|2[0-3]):[0-5][0-9]$"
+                                    }
+                                },
+                                "required": ["schedule"],
+                                "additionalProperties": false
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                       "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "message": {
+                                            "$ref": "#/components/schemas/ResponseMessage"
+                                        }
+                                    },
+                                    "additionalProperties": false
+                                }
+                            }
+                        }
+                    },
+                    "406": {
+                        "$ref": "#/components/responses/406ErrorResponse"
+                    },
+                    "415": {
+                        "$ref": "#/components/responses/415ErrorResponse"
+                    },
+                    "429": {
+                        "$ref": "#/components/responses/429ErrorResponse"
+                    },
+                    "default": {
+                        "$ref": "#/components/responses/DefaultErrorResponse"
+                    }
+                }
+            }
         }
     },
     "components": {
@@ -878,6 +1015,22 @@
                 "type": "string",
                 "pattern": "^[a-f\\d]{24}$",
                 "example": "661cc8464787094021349548"
+            },
+            "AccountOptions": {
+                "description": "Optional settings for a users bank account",
+                "type": "object",
+                "properties": {
+                    "paperStatements": {
+                        "type": "boolean"
+                    },
+                    "cardActivityAlerts": {
+                        "type": "boolean"
+                    },
+                    "smsNotifications": {
+                        "type": "boolean"
+                    }
+                },
+                "additionalProperties": false
             },
             "Address": {
                 "type": "object",
@@ -1100,7 +1253,7 @@
             "TransferAmount": {
                 "type": "number",
                 "format": "float",
-                "minimum": 1.00,
+                "minimum": 0,
                 "maximum": 3000.00,
                 "example": 100
             }
